recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  if (levels == 0) {
    forward(length);
  } else {
    forward(length)
    polygonFractal()
  }
}